yiltc-go-backup/testsuite/negative/arithmetic_on_string.yilt
fn foo()
    let x = "a" - "b"
